[project]
name = "fastmcp-credentials"
version = "0.1.0"
description = "Credential injection middleware for FastMCP servers — keeps secrets out of the LLM"
authors = [
  { name="AStheTECH", email="contact@asthetech.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICEN[CS]E*"]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_credentials"]

[project.urls]
Homepage = "https://github.com/AStheTECH/fastmcp-credentials"
Issues = "https://github.com/AStheTECH/fastmcp-credentials/issues"