[project]
name = "fastmcp-credentials"
version = "0.1.1"
description = "Credential injection middleware for FastMCP servers — keeps secrets out of the LLM"
authors = [
  { name="AStheTECH", email="contact@asthetech.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["fastmcp", "mcp", "credentials", "middleware", "oauth", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_credentials"]

[project.urls]
Homepage = "https://github.com/AStheTECH/fastmcp-credentials"
Issues = "https://github.com/AStheTECH/fastmcp-credentials/issues"
Changelog = "https://github.com/AStheTECH/fastmcp-credentials/blob/main/CHANGELOG.md"

[tool.mypy]
strict = true